--- a/myproject/myapp/templates/myapp/index.html
+++ b/myproject/myapp/templates/myapp/index.html
@@ -54,42 +54,44 @@
 			<div class="cover-container">
 
 				<!-- Navigation -->
-			    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a>
+			    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a> 
 			    <nav id="sidebar-wrapper">
 
 			        <ul class="sidebar-nav">
 
 			            <li class="sidebar-brand">
-			                <a href="#top"  onclick = $("#menu-close").click(); > anais angela lee</a>
+			                <a href="#top"  onclick = $("#menu-toggle").click();> anais angela lee</a>
 			            </li>
 
 			            <li class="links l1">
-			                <a href="#top" onclick = $("#menu-close").click(); ><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  Home</a>
+			                <a href="#top" onclick = $("#menu-toggle").click(); ><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  home</a>
 			            </li>
 			            <li class="links l2">
-			                <a href="#aboutme" onclick = $("#menu-close").click(); ><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  About Me </a>
+			                <a href="#aboutme" onclick = $("#menu-toggle").click(); ><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  about me </a>
 			            </li>
 			            <li class="links l3">
-			                <a href="#productdesign" onclick = $("#menu-close").click(); ><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>  Product Design</a>
+			                <a href="#productdesign" onclick = $("#menu-toggle").click(); ><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>  product design </a>
 			            </li>
 			            <li class="links l4">
-			                <a href="#code" onclick = $("#menu-close").click(); ><span class="glyphicon glyphicon-file" aria-hidden="true"></span>  Code</a>
+			                <a href="#code" onclick = $("#menu-toggle").click(); ><span class="glyphicon glyphicon-file" aria-hidden="true"></span>  code </a>
 			            </li>
 			            <li class="links l5">
-			                <a href="#photography" onclick = $("#menu-close").click(); ><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>  Photography</a>
+			                <a href="#photography" onclick = $("#menu-toggle").click(); ><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>  photography</a>
 			            </li>
 			            <li class="links l6">
-			            	<a href="#finearts" onclick = $("#menu-close").click(); ><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>  Fine Arts</a>
+			            	<a href="#finearts" onclick = $("#menu-toggle").click(); ><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>  fine arts</a>
 			            </li>
 			            <li class="links l7">
-			            	<a href="#contactme" onclick = $("#menu-close").click(); ><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Contact Me </a>
+			            	<a href="#contactme" onclick = $("#menu-toggle").click(); ><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  contact me </a>
 			            </li>
 
 			        </ul>
 			    </nav> <!--end navigation-->
 
 		        <div class="inner cover">
-		           	<h1 class="cover-heading">ANAIS ANGELA LEE</h1>
+		           	<img src="{% static 'myapp/images/eye.svg' %}" style="width:400px; height:400px">
+		           	<img src="{% static 'myapp/images/closedeye.svg' %}"> 
+
 		           	<p class="lead"> create | design | code </p>
 
 		           	<hr style="visibility: hidden;" />
@@ -170,7 +172,7 @@
 
 
     <!-- BODY/CONTENT of page -->
-	<div class="site-wrapper sixthpage" id="contactme" style="page-break-before:always;">
+	<div class="site-wrapper seventhpage" id="contactme" style="page-break-before:always;">
 		<div class="site-wrapper-inner">
 			<div class="cover-container">
 				<h2> CONTACT ME </h2>
@@ -217,38 +219,7 @@
 
 
 	
-	<script>
-		$(function () { // wait for document ready
-			// init
-			var controller = new ScrollMagic.Controller();
-
-			// define movement of panels
-			var wipeAnimation = new TimelineMax()
-				// animate to second panel
-				.to("#slideContainer", 0.5, {z: -150})		// move back in 3D space
-				.to("#slideContainer", 1,   {x: "-25%"})	// move in to first panel
-				.to("#slideContainer", 0.5, {z: 0})				// move back to origin in 3D space
-				// animate to third panel
-				.to("#slideContainer", 0.5, {z: -150, delay: 1})
-				.to("#slideContainer", 1,   {x: "-50%"})
-				.to("#slideContainer", 0.5, {z: 0})
-				// animate to forth panel
-				.to("#slideContainer", 0.5, {z: -150, delay: 1})
-				.to("#slideContainer", 1,   {x: "-75%"})
-				.to("#slideContainer", 0.5, {z: 0});
-
-			// create scene to pin and link animation
-			new ScrollMagic.Scene({
-					triggerElement: "#pinContainer",
-					triggerHook: "onLeave",
-					duration: "500%"
-				})
-				.setPin("#pinContainer")
-				.setTween(wipeAnimation)
-				.addIndicators() // add indicators (requires plugin)
-				.addTo(controller);
-		});
-	</script>
+	
 
 	<!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -263,21 +234,17 @@
 
 	    // Scrolls to the selected menu item on the page
 	    $('a[href*=#]:not([href=#])').click(function() {
-	    	$("#sidebar-wrapper").toggleClass("active");
-
-		    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') 
-		        || location.hostname == this.hostname) {
-
-		        var target = $(this.hash);
-		        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-		           if (target.length) {
-		             $('html,body').animate({
-		                 scrollTop: target.offset().top
-		            }, 1000);
-		            return false;
-		        }
-		    }
-		});
+	        if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+	            var target = $(this.hash);
+	            target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+	            if (target.length) {
+	                $('html,body').animate({
+	                    scrollTop: target.offset().top
+	                }, 1000);
+	                return false;
+	            }
+	        }
+	    });
     </script>
 	
 
